2.1.0/_sources/gallery/subplots_axes_and_figures/geo_demo.rst.txt


.. _sphx_glr_gallery_subplots_axes_and_figures_geo_demo.py:


======================
Geographic Projections
======================

This shows 4 possible projections using subplot.  Matplotlib also
supports `Basemaps Toolkit <https://matplotlib.org/basemap>`_ and
`Cartopy <http://scitools.org.uk/cartopy>`_ for geographic projections.




.. code-block:: python


    import matplotlib.pyplot as plt








.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="aitoff")
    plt.title("Aitoff")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_001.png
    :align: center





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="hammer")
    plt.title("Hammer")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_002.png
    :align: center





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="lambert")
    plt.title("Lambert")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_003.png
    :align: center





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="mollweide")
    plt.title("Mollweide")
    plt.grid(True)

    plt.show()



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_004.png
    :align: center




**Total running time of the script:** ( 0 minutes  0.034 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: geo_demo.py <geo_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: geo_demo.ipynb <geo_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
