2.2.4/_sources/gallery/subplots_axes_and_figures/geo_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_geo_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_geo_demo.py:


======================
Geographic Projections
======================

This shows 4 possible projections using subplot.  Matplotlib also
supports `Basemaps Toolkit <https://matplotlib.org/basemap>`_ and
`Cartopy <http://scitools.org.uk/cartopy>`_ for geographic projections.




.. code-block:: python


    import matplotlib.pyplot as plt








.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="aitoff")
    plt.title("Aitoff")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="hammer")
    plt.title("Hammer")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_002.png
    :class: sphx-glr-single-img





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="lambert")
    plt.title("Lambert")
    plt.grid(True)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_003.png
    :class: sphx-glr-single-img





.. code-block:: python


    plt.figure()
    plt.subplot(111, projection="mollweide")
    plt.title("Mollweide")
    plt.grid(True)

    plt.show()



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_geo_demo_004.png
    :class: sphx-glr-single-img





.. _sphx_glr_download_gallery_subplots_axes_and_figures_geo_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: geo_demo.py <geo_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: geo_demo.ipynb <geo_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
